# check-npm-scope-access

./: .editorconfig  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/workflows/: lint-and-typecheck.yml  release.yml
scripts/: check_package_access.py
tests/: test_check_package_access.py
