[project]
name = "check-npm-scope-access"
version = "0.9.0"
description = "GitHub Action to verify read access to private NPM packages for one or more scopes"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.13.0",
    "mypy>=1.18.0",
    "pytest>=8.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
